--- a/personal.html
+++ b/personal.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="getJson.js"></script>
+    <title>personal</title>
+    <script src="getJson.js" defer></script>
 </head>
 
 <body>
     <h2>버튼을 눌러 결과를 확인해보세요</h2>
-    <button id="button">좋아하는 거</button>
-    <button id="button">좋아하는 음식</button>
-    <button id="button">취미</button>
-    <button id="button">좋아하는 말</button>
-    <button id="button">하고싶은 말</button>
+    <button class="button">좋아하는 거</button>
+    <button class="button">좋아하는 음식</button>
+    <button class="button">취미</button>
+    <button class="button">좋아하는 말</button>
+    <button class="button">하고싶은 말</button>
     <p id="result"></p>
 </body>
 
