--- a/scroll.html
+++ b/scroll.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js" defer></script>
     <title>Document</title>
     <link rel="stylesheet" href="scroll.css">
-    <script src="scroll.js"></script>
+    <script src="scroll.js" defer></script>
 </head>
 <body class="body">
     <div class="content"><h1>1</h1></div>
