--- a/personal.html
+++ b/personal.html
@@ -11,16 +11,11 @@
 
 <body>
     <h2>버튼을 눌러 결과를 확인해보세요</h2>
-    <!-- <button class="button">좋아하는 거</button>
+    <button class="button">좋아하는 거</button>
     <button class="button">좋아하는 음식</button>
     <button class="button">취미</button>
     <button class="button">좋아하는 말</button>
-    <button class="button">하고싶은 말</button> -->
-    <button class="button" id="btn_like">좋아하는 거</button>
-    <button class="button" id="btn_food">좋아하는 음식</button>
-    <button class="button" id="btn_hobby">취미</button>
-    <button class="button" id="btn_word">좋아하는 말</button>
-    <button class="button" id="btn_wish">하고싶은 말</button>
+    <button class="button">하고싶은 말</button>
     <p id="result"></p>
 </body>
 
