--- a/profile.html
+++ b/profile.html
@@ -10,48 +10,41 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="scroll.js" defer></script>
     <script src="chart.js" defer></script>
-    <!-- <script src="getJson.js" defer></script> -->
+    <script src="getJson.js" defer></script>
 </head>
 
 <body>
     <header class="header">
         <ul>
-            <li><a href="profile.html">프로필</a></li>
-            <li><a href="career.html">학력&경력</a></li>
-            <li><a href="skill.html">역량</a></li>
-            <li><a href="personal.html">성격</a></li>
+            <li><div class="page" id="profile">프로필</div></li>
+            <li><div class="page" id="career">학력&경력</div></li>
+            <li><div class="page" id="capability">역량</div></li>
+            <li><div class="page" id="personal">성격</div></li>
         </ul>
     </header>
     <main class="main">
         <div class="profile">
-            <div class="picture_box">
+            <div class="picture__box">
                 <h2>이창현</h2>
                 <h3>엘리스 IoT1기</h3>
-                <img src="./assets/profile_pic.png" alt="profile_picture">
-                <p>최고의 개발자가 되기 위해 노력하고 있는 23살 예비 개발자 이창현입니다. <br>
+                <img src="./assets/profile_pic.png" alt="profile__picture">
+                <p>개발자가 되기 위해 노력하고 있는 예비 개발자 이창현입니다. <br>
                     주어진 일에 항상 최선을 다하겠습니다. 감사합니다.
                 </p>
             </div>
-            <div class="info_box">
-                <ul>
-                    <div>
-                        <div><img src="./assets/phone.png" alt="phone"></div>
-                        <li>010-8531-9558</li>
-                    </div>
-                    <div>
-                        <div><img src="./assets/email.png" alt="email"></div>
-                        <li>dlckdgus200011@gmail.com</li>
-                    </div>
-                    <div>
-                        <div><img src="./assets/address.png" alt="address"></div>
-                        <li>경기도 용인시 기흥구</li>
-                    </div>
-                    <div>
-                        <div><img src="./assets/github.png" alt="github"></div>
-                        <li><a href="https://github.com/ChangHyunL" target="_blank">https://github.com/ChangHyunL</a>
-                        </li>
-                    </div>
-                </ul>
+            <div class="info__box">
+                <div class="img__box">
+                    <div><img src="./assets/phone.png" alt="phone"></div>
+                    <div><img src="./assets/email.png" alt="email"></div>
+                    <div><img src="./assets/address.png" alt="address"></div>
+                    <div><img src="./assets/github.png" alt="github"></div>
+                </div>
+                <div class="my__info">
+                    <div>010-8531-9558</div>
+                    <div>dlckdgus200011@gmail.com</div>
+                    <div>경기도 용인시 기흥구</div>
+                    <div><a href="https://github.com/ChangHyunL" target="_blank">https://github.com/ChangHyunL</a></div>
+                </div>
             </div>
         </div>
         <div class="career">
@@ -88,6 +81,7 @@
             <button class="button">좋아하는 말</button>
             <button class="button">하고싶은 말</button>
             <p id="result"></p>
+            <img id="image" src="">
         </div>
     </main>
     <footer class="footer">
