--- a/profile.html
+++ b/profile.html
@@ -11,15 +11,24 @@
     <script src="scroll.js" defer></script>
     <script src="chart.js" defer></script>
     <script src="getJson.js" defer></script>
+    <script src="image__slide.js" defer></script>
 </head>
 
 <body>
     <header class="header">
         <ul>
-            <li><div class="page" id="profile">프로필</div></li>
-            <li><div class="page" id="career">학력&경력</div></li>
-            <li><div class="page" id="capability">역량</div></li>
-            <li><div class="page" id="personal">성격</div></li>
+            <li>
+                <div class="page" id="profile">PROFILE</div>
+            </li>
+            <li>
+                <div class="page" id="career">CAREER</div>
+            </li>
+            <li>
+                <div class="page" id="capability">CAPABILITY</div>
+            </li>
+            <li>
+                <div class="page" id="personal">PERSONAL</div>
+            </li>
         </ul>
     </header>
     <main class="main">
@@ -48,22 +57,23 @@
             </div>
         </div>
         <div class="career">
-            <h2>About My Career</h2>
+            <p>A&nbsp;B&nbsp;O&nbsp;U&nbsp;T&nbsp;&nbsp;&nbsp;&nbsp;M&nbsp;Y&nbsp;&nbsp;&nbsp;&nbsp;C&nbsp;A&nbsp;R&nbsp;E&nbsp;E&nbsp;R
+            </p>
             <div class="career__list">
                 <ul>
-                    <h3>2022-11 ~ </h3>
+                    <p>2022-11 ~ </p>
                     <h4>엘리스 IoT트랙 1기 수강 중</h4>
                     <div><img src="./assets/elice.png" alt="elice"></div>
                     <p>웹프로그래밍과 IoT기술에 대해 배우고 있습니다.</p>
                 </ul>
                 <ul>
-                    <h3>2022-04 ~ 2022-08</h3>
+                    <p>2022-04 ~ 2022-08</p>
                     <h4>창업경진대회 참가 & 멘토링</h4>
                     <div><img src="./assets/startup.jpg" alt="startup"></div>
                     <p>창업시장에 대한 전반적인 지식을 배웠습니다.</p>
                 </ul>
                 <ul>
-                    <h3>2019-03 ~ </h3>
+                    <p>2019-03 ~ </p>
                     <h4>단국대학교 소프트웨어학과 재학 중</h4>
                     <div><img src="./assets/dku.jpg" alt="dku"></div>
                     <p>프로그래밍에 대한 전반적인 지식을 배우고 있습니다.</p>
@@ -74,14 +84,15 @@
             <canvas id="myChart"></canvas>
         </div>
         <div class="personal">
-            <h2>버튼을 눌러 결과를 확인해보세요</h2>
-            <button class="button">좋아하는 거</button>
-            <button class="button">좋아하는 음식</button>
-            <button class="button">취미</button>
-            <button class="button">좋아하는 말</button>
-            <button class="button">하고싶은 말</button>
-            <p id="result"></p>
-            <img id="image" src="">
+            <div class="slide__page">
+                <div class="slide__wrapper">
+                    <ul class="slides"></ul>
+                </div>
+                <div class="controls">
+                    <p id="prev">prev</p>
+                    <p id="next">next</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer class="footer">
