--- a/test.html
+++ b/test.html
@@ -1,13 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="test.js" defer></script>
     <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            list-style: none;
+        }
+
+        .slide__page {
+            width: 960px;
+            height: 300px;
+        }
+
+        .slide__page>.slide__wrapper {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+            overflow: hidden;
+        }
+
+        .slide__page>.slide__wrapper>.slides {
+            position: absolute;
+            margin: auto;
+            width: 1620px;
+            right:-660px;
+        }
+
+        .slides>li:not(:last-child) {
+            float: left;
+            margin-right: 30px;
+        }
+
+        .controls {
+            width: 100%;
+            text-align: center;
+            display: flex;
+        }
+
+        .controls>p {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            margin: 0px 10px;
+        }
+
+        .controls>p#prev {
+            float: left;
+        }
+
+        controls>p#next {
+            float: right;
+        }
+    </style>
 </head>
+
 <body>
-    <div>방명록</div>
+    <div class="slide__page">
+        <div class="slide__wrapper">
+            <ul class="slides">
+                <li><img src="./assets/dku.jpg" alt="" style="width: 300px; height: 300px;"></li>
+                <li><img src="./assets/profile_pic.png" alt="" style="width: 300px; height: 300px;"></li>
+                <li><img src="./assets/startup.jpg" alt="" style="width: 300px; height: 300px;"></li>
+                <li><img src="./assets/dku.jpg" alt="" style="width: 300px; height: 300px;"></li>
+                <li><img src="./assets/email.png" alt="" style="width: 300px; height: 300px;"></li>
+            </ul>
+        </div>
+        <div class="controls">
+            <p id="prev">prev</p>
+            <p id="next">next</p>
+        </div>
+    </div>
+
 </body>
+
 </html>
