--- a/test.html
+++ b/test.html
@@ -1,87 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="test.js" defer></script>
     <title>Document</title>
     <style>
-        * {
+        *{
             margin: 0;
             padding: 0;
         }
-
-        li {
-            list-style: none;
+        .guest{
+            width: 600px;
+            height: 600px;
+            margin: auto;
+            background-color: aquamarine;
         }
-
-        .slide__page {
-            width: 960px;
-            height: 300px;
+        .guest > .writeName {
+            width: 100%;
+            height: 200px;
+            background-color: beige;
         }
-
-        .slide__page>.slide__wrapper {
-            position: relative;
+        .guest > .writeContents {
+            width: 100%;
+            height: 400px;
+            background-color: aliceblue;
+        }
+        #name {
             width: 100%;
             height: 100%;
-            margin: 0 auto;
-            overflow: hidden;
         }
-
-        .slide__page>.slide__wrapper>.slides {
-            position: absolute;
-            margin: auto;
-            width: 1620px;
-            right:-660px;
-        }
-
-        .slides>li:not(:last-child) {
-            float: left;
-            margin-right: 30px;
-        }
-
-        .controls {
+        #content {
             width: 100%;
-            text-align: center;
-            display: flex;
+            height: 100%;
         }
-
-        .controls>p {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 20px;
-            margin: 0px 10px;
-        }
-
-        .controls>p#prev {
-            float: left;
-        }
-
-        controls>p#next {
+        .submit {
+            width: 80px;
+            height: 30px;
             float: right;
         }
     </style>
 </head>
-
 <body>
-    <div class="slide__page">
-        <div class="slide__wrapper">
-            <ul class="slides">
-                <li><img src="./assets/dku.jpg" alt="" style="width: 300px; height: 300px;"></li>
-                <li><img src="./assets/profile_pic.png" alt="" style="width: 300px; height: 300px;"></li>
-                <li><img src="./assets/startup.jpg" alt="" style="width: 300px; height: 300px;"></li>
-                <li><img src="./assets/dku.jpg" alt="" style="width: 300px; height: 300px;"></li>
-                <li><img src="./assets/email.png" alt="" style="width: 300px; height: 300px;"></li>
-            </ul>
+    <div class="guest">
+        <div class="writeName">
+            <input type="text" name="namefield" placeholder="write name" id="name">
         </div>
-        <div class="controls">
-            <p id="prev">prev</p>
-            <p id="next">next</p>
+        <div class="writeContents">
+            <textarea id="content" placeholder="write contents" maxlength="1000"></textarea>
         </div>
+        <button class="submit">제출</button>
     </div>
-
 </body>
-
 </html>
